# neblina-server

./: .gitignore  CMakeLists.txt  GNUmakefile  HACKING.md  Makefile  TODO.md  build.bat  neblina.sln  neblina.vcxproj  objects.mk  valgrind.supp
.github/workflows/: freebsd-clang.yaml  linux-gcc.yaml  linux.yaml  macos.yaml  windows-dist.yaml  windows.yaml
cmake/: clang.cmake  common.cmake  gcc.cmake  msvc.cmake  special-targets.cmake
main/: main.c
os/: os.h  poller.h  socket.h  timer.h  window.h
os/apple/: poller.c
os/bsd/: poller.c
os/linux/: poller.c
os/posix/: os.c  timer.c  window.c
os/win32/: os.c  poller.c  pthread.c  socket.c  timer.c  window.c
scripts/: create_class.sh
src/: main.c
src/client/: client.c  client.h  client_priv.h  sslclient.c  sslclient.h  tcpclient.c  tcpclient.h  tcpclient_priv.h
src/os/: fs.h  os.h  pthread.h  window.h
src/os/posix/: fs.c  os.c  window.c
src/os/win32/: fs.c  os.c  pthread.c  window.c
src/server/: commbuf.c  commbuf.h  connection.c  connection.h  server.c  server.h  server_priv.h  socket.h
src/server/cpool/: cpool.c  cpool.h
src/server/poller/: poller.h  poller_apple.c  poller_unix.c  poller_win32.c
src/server/spool/: spool.c  spool.h
src/server/ssl/: ssl_server.c  ssl_server.h
src/server/tcp/: tcp_server.c  tcp_server.h  tcp_server_priv.h
src/service/: session.c  session.h
src/tpool/: tpool.c  tpool.h
src/util/: alloc.c  alloc.h  error.c  error.h  future.c  future.h  logs.c  logs.h
src/watchdog/: watchdog.c  watchdog.h
tests/: commbuf.cc  future.cc  parrot-test  parrot.c  sparrot.c  ssl.cc  tcp.cc  tests.c  timer.cc  watchdog.cc
tests/watchdog/: error.c  infloop.c  nonrecoverable.c
tmp/ssl/: ssl_server.c
tmp/tests/: sparrot.c  tests.c
